--- a/src/main/resources/template/defaultStyleBrowseTemplate.html
+++ b/src/main/resources/template/defaultStyleBrowseTemplate.html
@@ -1,5 +1,51 @@
 <!--预览视图-->
-<div>
-    浏览视图
+<div class="product-lists"  xmlns:th="http://www.thymeleaf.org" th:id="${componentId}">
+    <div class="product-lists-left">
+        <!--数据源标题-->
+        <div class="product-lists-left-tittle">
+            <h3 th:text="${mallProductCategory.name}">数据源</h3>
+        </div>
+        <!--左边文章内容-->
+        <div class="product-lists-left-content" th:utext="${leftArticle.content}">
+            <img src="//img12.360buyimg.com/da/jfs/t3049/216/3946578997/14563/521bfae7/57fb5fa1N333e77df.jpg" width="330" height="476">
+        </div>
+    </div>
+    <div class="product-lists-right">
+        <div class="product-lists-right-tab">
+            <ul class="tab">
+                <!-- 右边文章内容-->
+                <li class="tab-item tab-selected">
+                    <a href="javascript:void(0)" th:text="${rightArticle.title}">热门</a>
+                    <!--推荐-->
+                    <div class="tab-content tab-content-index" th:utext="${rightArticle.content}">
+                        <img src="http://oevfoawam.bkt.clouddn.com/test-pic.png" width="880" height="476">
+                    </div>
+                </li>
+                <!--商城产品数据源item-->
+                <li class="tab-item" th:each="mallProduct:${mallProductDataList}">
+                    <a href="javascript:void(0)" th:text="${mallProduct.name}">大家电</a>
+                    <!--item对应的商城产品列表-->
+                    <div class="tab-content">
+                        <ul>
+                            <li class="goods-list-item goods-list-4" th:each="goods :${mallProduct.mallGoodsPage}">
+                                <a href="#" target="_blank" title="xxx" class="goods-image">
+                                    <img th:src="${goods.smallPic.value}" width="130" height="130"
+                                         th:alt="${goods.title}" alt="火图科技"
+                                          src="//img10.360buyimg.com/N3/jfs/t1918/169/2366995781/85503/38fffc90/57057f7eN936fd6c0.jpg">
+                                </a>
+                                <p class="goods-name">
+                                    <a target="_blank" th:text="${goods.title}" href="#">
+                                        华为 P9 全网通 3GB+32GB版 流光金 移动联通电信4G手机 双卡双待</a>
+                                </p>
+                                <div class="goods-price"><span
+                                        th:text="${'￥'+ #numbers.formatDecimal(goods.price,1,2)}"></div>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+    </div>
 </div>
 <!--/预览视图-->
