--- a/src/main/resources/template/defaultStyleBrowseTemplate.html
+++ b/src/main/resources/template/defaultStyleBrowseTemplate.html
@@ -1,5 +1,5 @@
 <!--预览视图-->
-<div class="product-lists"  xmlns:th="http://www.thymeleaf.org" th:id="${componentId}">
+<div xmlns:th="http://www.thymeleaf.org" class="product-lists" th:id="${componentId}">
     <div class="product-lists-left">
         <!--数据源标题-->
         <div class="product-lists-left-tittle">
@@ -28,20 +28,20 @@
                     <div class="tab-content">
                         <ul>
                             <li class="goods-list-item goods-list-4" th:each="goods :${mallProduct.mallGoodsPage}">
-                                <a href="#"
-                                   th:href="@{/${mallProduct.contentURI}/{contentSerial}(contentSerial='mallgood_'+${goods.id})}"
-                                   target="_blank" title="xxx" class="goods-image">
+                                <a href="javascript:void(0)"
+                                   th:href="${goodDetailUrl+'/'+goods.id+'/'}"
+                                   target="_blank" class="goods-image">
                                     <img th:src="${goods.smallPic.value}" width="130" height="130"
                                          th:alt="${goods.title}" alt="火图科技"
                                           src="//img10.360buyimg.com/N3/jfs/t1918/169/2366995781/85503/38fffc90/57057f7eN936fd6c0.jpg">
                                 </a>
                                 <p class="goods-name">
-                                    <a target="_blank" th:text="${goods.title}" href="#"
-                                       th:href="@{/${mallProduct.contentURI}/{contentSerial}(contentSerial='mallgood_'+${goods.id})}">
+                                    <a target="_blank" th:text="${goods.title}" href="javascript:void(0)"
+                                       th:href="${goodDetailUrl+'/'+goods.id+'/'}">
                                         华为 P9 全网通 3GB+32GB版 流光金 移动联通电信4G手机 双卡双待</a>
                                 </p>
                                 <div class="goods-price"><span
-                                        th:text="${'￥'+ #numbers.formatDecimal(goods.price,1,2)}"></div>
+                                        th:text="${'￥'+ #numbers.formatDecimal(goods.price,1,2)}"></span></div>
                             </li>
                         </ul>
                     </div>
