以免 商城 和 官网的样式傻傻分不清 修改了 顶部 class

--- a/src/main/resources/template/defaultStyleBrowseTemplate.html
+++ b/src/main/resources/template/defaultStyleBrowseTemplate.html
@@ -1,5 +1,5 @@
 <!--预览视图-->
-<div class="product-lists"  xmlns:th="http://www.thymeleaf.org" th:id="${componentId}">
+<div class="mall-product-lists"  xmlns:th="http://www.thymeleaf.org" th:id="${componentId}">
     <div class="product-lists-left">
         <!--数据源标题-->
         <div class="product-lists-left-tittle">
